# LiveBuildingSystems-CodingChallenge-Part1

./: .dockerignore  .gitignore  Dockerfile  README.md  add_fake_data.py  app.py  database.py  docker-compose.yml  meter.db  pyproject.toml
api/: meter.py
static/: style.css
templates/: base.html  card.html  meter.html
